--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/PoCTest.PoCTest
-EditorStartupMap=/Game/PoCTest.PoCTest
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
