Persistent data when switching levels
Keep your stuff when you change levels. Saving a game on your machine is coming next.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Blueprints/Persistence/GI_Persistent.GI_Persistent_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
