--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5D8B172A4F2B7F07DD915187D324574D
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "82E5CDB047C39479B5DB788ECBBF1963", "Project Theseus")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
